# Langchain_RAG

RAG/: README.md  pyproject.toml  requirements.txt
RAG/DataIngestion/: DataIngestion.ipynb  speech.txt  text_loader.py
